<?xml version="1.0" encoding="UTF-8"?>

<!-- 
 Sandwood

 Copyright (c) 2019-2025, Oracle and/or its affiliates

 Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.sandwood</groupId>
	<artifactId>sandwood</artifactId>
	<version>0.6.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Sandwood</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<modules>
		<module>compiler</module>
		<module>runtime</module>
		<module>jdkRNGs</module>
		<module>sandwoodCommon</module>
	</modules>

	<licenses>
		<license>
			<name>Oracle Universal Permissive License</name>
			<url>https://oss.oracle.com/licenses/upl/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Daniel Goodman</name>
			<email>daniel.goodman@oracle.com</email>
			<organization>Oracle Labs</organization>
			<organizationUrl>https://labs.oracle.com</organizationUrl>
		</developer>
		<developer>
			<name>Adam Pocock</name>
			<email>adam.pocock@oracle.com</email>
			<organization>Oracle Labs</organization>
			<organizationUrl>https://labs.oracle.com</organizationUrl>
		</developer>
		<developer>
			<name>Guy Steele</name>
			<organization>Oracle Labs</organization>
			<organizationUrl>https://labs.oracle.com</organizationUrl>
		</developer>
		<developer>
			<name>Natalia Kosilova</name>
			<email>natalia.kosilova@oracle.com</email>
			<organization>Oracle Labs</organization>
			<organizationUrl>https://labs.oracle.com</organizationUrl>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.9.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.9.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.3</version>
				<configuration>
					<includes>
						<include>**/*.java</include>
					</includes>
					<argLine>-Xmx8192m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>17</release>
					<testRelease>17</testRelease>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>src</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>package</phase>
								<goals>
									<goal>aggregate</goal>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>javadoc</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.5.0</version>
						<configuration>
							<bottom>Copyright &#169; 2018&#x2013;2024 Oracle
								and/or its affiliates. All rights reserved.</bottom>
							<sourceFileExcludes>
								<!-- faulty java doc in a generated file, so
								ignore the generated file -->
								<sourceFileExclude>
									**/org/sandwood/compiler/srcTools/sourceToSource/JavaCharStream.java</sourceFileExclude>
								<!-- Block test files, most of these are not
								created by the tool, but a few are and this
								removes them. -->
								<sourceFileExclude>
									**/org/sandwood/tests/**/*.java</sourceFileExclude>
							</sourceFileExcludes>
							<additionalJOptions>
								<additionalJOption>-Xmaxwarns</additionalJOption>
								<additionalJOption>65536</additionalJOption>
							</additionalJOptions>
							<reportOutputDirectory>
								${project.reporting.outputDirectory}</reportOutputDirectory>
							<destDir>javadoc</destDir>
						</configuration>
						<executions>
							<execution>
								<id>aggregate</id>
								<phase>package</phase>
								<goals>
									<goal>aggregate</goal>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
